feat: changed the call from the list to getlast and getfirst